<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_t07_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mcodegeeks.tutorial.T07_Intent.T07MainActivity">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t07_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_browser"
        android:id="@+id/startBrowserButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/titleView"
        android:layout_alignStart="@+id/titleView"
        android:layout_alignRight="@+id/titleView"
        android:layout_alignEnd="@+id/titleView"
        android:onClick="startBrowser" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_phone"
        android:id="@+id/startPhoneButton"
        android:layout_below="@+id/startBrowserButton"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/titleView"
        android:layout_alignStart="@+id/titleView"
        android:layout_alignRight="@+id/titleView"
        android:layout_alignEnd="@+id/titleView"
        android:onClick="startPhone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_rating"
        android:id="@+id/showRatingButton"
        android:layout_below="@+id/startPhoneButton"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/titleView"
        android:layout_alignStart="@+id/titleView"
        android:layout_alignRight="@+id/titleView"
        android:layout_alignEnd="@+id/titleView"
        android:onClick="showRating" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_text"
        android:id="@+id/sendTextButton"
        android:layout_below="@+id/showRatingButton"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/titleView"
        android:layout_alignStart="@+id/titleView"
        android:layout_alignRight="@+id/titleView"
        android:layout_alignEnd="@+id/titleView"
        android:onClick="sendText" />

</RelativeLayout>
