<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_t08_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mcodegeeks.tutorial.T08_EventHandling.T08MainActivity">

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t08_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textExample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_example"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_font"
        android:id="@+id/smallFontButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/titleView"
        android:layout_alignStart="@+id/titleView"
        android:layout_alignRight="@+id/titleView"
        android:layout_alignEnd="@+id/titleView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_font"
        android:id="@+id/largeFontButton"
        android:layout_below="@+id/smallFontButton"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/titleView"
        android:layout_alignStart="@+id/titleView"
        android:layout_alignRight="@+id/titleView"
        android:layout_alignEnd="@+id/titleView" />

</RelativeLayout>
